@@ -33,7 +33,6 @@ import org.bukkit.configuration.file.FileConfiguration;
 import pb.ajneb97.PaintballBattle;
 import pb.ajneb97.api.Hat;
 import pb.ajneb97.api.PaintballAPI;
-import pb.ajneb97.api.Perk;
 import pb.ajneb97.database.JugadorDatos;
 import pb.ajneb97.database.MySQL;
 import pb.ajneb97.juego.Equipo;
@@ -48,21 +47,30 @@ import pb.ajneb97.utils.ValueOfPatch;
 public class PartidaManager {
 
 	@SuppressWarnings("deprecation")
-	public static void jugadorEntra(Partida partida,Player jugador,PaintballBattle plugin) {
+	public static void jugadorEntra(Partida partida, Player jugador, PaintballBattle plugin) {
 		JugadorPaintball jugadorPaintball = new JugadorPaintball(jugador);
 		FileConfiguration messages = plugin.getMessages();
 		partida.agregarJugador(jugadorPaintball);
 		ArrayList<JugadorPaintball> jugadores = partida.getJugadores();
-		for(int i=0;i<jugadores.size();i++) {
-			jugadores.get(i).getJugador().sendMessage(ChatColor.translateAlternateColorCodes('&', messages.getString("playerJoin").replace("%player%", jugador.getName())
-					.replace("%current_players%", partida.getCantidadActualJugadores()+"").replace("%max_players%", partida.getCantidadMaximaJugadores()+"")));
+
+		String joinMsgFormat = messages.getString("playerJoin", "&a%player% joined!");
+		for (JugadorPaintball jugadore : jugadores) {
+			jugadore.getJugador().sendMessage(ChatColor.translateAlternateColorCodes('&', joinMsgFormat
+					.replace("%player%", jugador.getName())
+					.replace("%current_players%", partida.getCantidadActualJugadores() + "")
+					.replace("%max_players%", partida.getCantidadMaximaJugadores() + "")));
 		}
-		
+
 		jugador.getInventory().clear();
-		jugador.getEquipment().clear();
-		jugador.getEquipment().setArmorContents(null);
-		jugador.updateInventory();
-		
+        jugador.getEquipment();
+        jugador.getEquipment().clear();
+		jugador.getInventory().clear();
+        jugador.getEquipment();
+        jugador.getEquipment().clear();
+        jugador.getEquipment().setArmorContents(new ItemStack[4]);
+        jugador.updateInventory();
+        jugador.updateInventory();
+
 		jugador.setGameMode(GameMode.SURVIVAL);
 		jugador.setExp(0);
 		jugador.setLevel(0);
@@ -74,180 +82,205 @@ public class PartidaManager {
 		for(PotionEffect p : jugador.getActivePotionEffects()) {
 			jugador.removePotionEffect(p.getType());
 		}
-		
-		jugador.teleport(partida.getLobby());
-		
+
+		if (partida.getLobby() != null) {
+			jugador.teleport(partida.getLobby());
+		}
+
 		FileConfiguration config = plugin.getConfig();
-		if(config.getString("leave_item_enabled").equals("true")) {
+		if("true".equals(config.getString("leave_item_enabled", "false"))) {
 			ItemStack item = UtilidadesItems.crearItem(config, "leave_item");
-			jugador.getInventory().setItem(8, item);
+            jugador.getInventory().setItem(8, item);
 		}
-		if(config.getString("hats_item_enabled").equals("true")) {
+		if("true".equals(config.getString("hats_item_enabled", "false"))) {
 			ItemStack item = UtilidadesItems.crearItem(config, "hats_item");
-			jugador.getInventory().setItem(7, item);
+            jugador.getInventory().setItem(7, item);
 		}
-		if(config.getString("choose_team_system").equals("true")) {
+		if("true".equals(config.getString("choose_team_system", "false"))) {
 			ItemStack item = UtilidadesItems.crearItem(config, "teams."+partida.getTeam1().getTipo());
-			ItemMeta meta = item.getItemMeta();
-			meta.setDisplayName(ChatColor.translateAlternateColorCodes('&', messages.getString("teamChoose").replace("%team%", config.getString("teams."+partida.getTeam1().getTipo()+".name"))));
-			item.setItemMeta(meta);
-			jugador.getInventory().setItem(0, item);
+			if (item.getItemMeta() != null) {
+				ItemMeta meta = item.getItemMeta();
+				String t1Name = config.getString("teams."+partida.getTeam1().getTipo()+".name", partida.getTeam1().getTipo());
+				String teamChooseMsg = messages.getString("teamChoose", "&aChoose %team%");
+				meta.setDisplayName(ChatColor.translateAlternateColorCodes('&', teamChooseMsg.replace("%team%", t1Name)));
+				item.setItemMeta(meta);
+				jugador.getInventory().setItem(0, item);
+			}
+
 			item = UtilidadesItems.crearItem(config, "teams."+partida.getTeam2().getTipo());
-			meta = item.getItemMeta();
-			meta.setDisplayName(ChatColor.translateAlternateColorCodes('&', messages.getString("teamChoose").replace("%team%", config.getString("teams."+partida.getTeam2().getTipo()+".name"))));
-			item.setItemMeta(meta);
-			jugador.getInventory().setItem(1, item);
+			if (item.getItemMeta() != null) {
+				ItemMeta meta = item.getItemMeta();
+				String t2Name = config.getString("teams."+partida.getTeam2().getTipo()+".name", partida.getTeam2().getTipo());
+				String teamChooseMsg = messages.getString("teamChoose", "&aChoose %team%");
+				meta.setDisplayName(ChatColor.translateAlternateColorCodes('&', teamChooseMsg.replace("%team%", t2Name)));
+				item.setItemMeta(meta);
+				jugador.getInventory().setItem(1, item);
+			}
 		}
-		
-		if(partida.getCantidadActualJugadores() >= partida.getCantidadMinimaJugadores() 
-				&& partida.getEstado().equals(EstadoPartida.ESPERANDO)) {
-			cooldownIniciarPartida(partida,plugin);
+
+		if(partida.getCantidadActualJugadores() >= partida.getCantidadMinimaJugadores()
+				&& EstadoPartida.ESPERANDO.equals(partida.getEstado())) {
+			cooldownIniciarPartida(partida, plugin);
 		}
 	}
-	
+
 	@SuppressWarnings("deprecation")
-	public static void jugadorSale(Partida partida,Player jugador,boolean finalizaPartida,
-			PaintballBattle plugin,boolean cerrandoServer) {
+	public static void jugadorSale(Partida partida, Player jugador, boolean finalizaPartida,
+	                               PaintballBattle plugin, boolean cerrandoServer) {
 		JugadorPaintball jugadorPaintball = partida.getJugador(jugador.getName());
 		FileConfiguration messages = plugin.getMessages();
-		ItemStack[] inventarioGuardado = jugadorPaintball.getGuardados().getInventarioGuardado();
-		ItemStack[] equipamientoGuardado = jugadorPaintball.getGuardados().getEquipamientoGuardado();
-		GameMode gamemodeGuardado = jugadorPaintball.getGuardados().getGamemodeGuardado();	
-		float xpGuardada = jugadorPaintball.getGuardados().getXPGuardada();
-		int levelGuardado = jugadorPaintball.getGuardados().getLevelGuardado();
-		int hambreGuardada = jugadorPaintball.getGuardados().getHambreGuardada();
-		double vidaGuardada = jugadorPaintball.getGuardados().getVidaGuardada();
-		double maxVidaGuardada = jugadorPaintball.getGuardados().getMaxVidaGuardada();
-		boolean allowFligth = jugadorPaintball.getGuardados().isAllowFlight();
-		boolean isFlying = jugadorPaintball.getGuardados().isFlying();
 
-		partida.removerJugador(jugador.getName());
-		
-		if(!finalizaPartida) {
-			ArrayList<JugadorPaintball> jugadores = partida.getJugadores();
-			for(int i=0;i<jugadores.size();i++) {
-				jugadores.get(i).getJugador().sendMessage(ChatColor.translateAlternateColorCodes('&', messages.getString("playerLeave").replace("%player%", jugador.getName())
-						.replace("%current_players%", partida.getCantidadActualJugadores()+"").replace("%max_players%", partida.getCantidadMaximaJugadores()+"")));
+		if (jugadorPaintball != null) {
+			ItemStack[] inventarioGuardado = jugadorPaintball.getGuardados().getInventarioGuardado();
+			ItemStack[] equipamientoGuardado = jugadorPaintball.getGuardados().getEquipamientoGuardado();
+			GameMode gamemodeGuardado = jugadorPaintball.getGuardados().getGamemodeGuardado();
+			float xpGuardada = jugadorPaintball.getGuardados().getXPGuardada();
+			int levelGuardado = jugadorPaintball.getGuardados().getLevelGuardado();
+			int hambreGuardada = jugadorPaintball.getGuardados().getHambreGuardada();
+			double vidaGuardada = jugadorPaintball.getGuardados().getVidaGuardada();
+			double maxVidaGuardada = jugadorPaintball.getGuardados().getMaxVidaGuardada();
+			boolean allowFligth = jugadorPaintball.getGuardados().isAllowFlight();
+			boolean isFlying = jugadorPaintball.getGuardados().isFlying();
+
+			partida.removerJugador(jugador.getName());
+
+			if(!finalizaPartida) {
+				ArrayList<JugadorPaintball> jugadores = partida.getJugadores();
+				String leaveMsgFormat = messages.getString("playerLeave", "&c%player% left!");
+				for (JugadorPaintball jugadore : jugadores) {
+					jugadore.getJugador().sendMessage(ChatColor.translateAlternateColorCodes('&', leaveMsgFormat
+							.replace("%player%", jugador.getName())
+							.replace("%current_players%", partida.getCantidadActualJugadores() + "")
+							.replace("%max_players%", partida.getCantidadMaximaJugadores() + "")));
+				}
 			}
-		}
-		
-		FileConfiguration config = plugin.getConfig();
-		double x = Double.valueOf(config.getString("MainLobby.x"));
-		double y = Double.valueOf(config.getString("MainLobby.y"));
-		double z = Double.valueOf(config.getString("MainLobby.z"));
-		String world = config.getString("MainLobby.world");
-		float yaw = Float.valueOf(config.getString("MainLobby.yaw"));
-		float pitch = Float.valueOf(config.getString("MainLobby.pitch"));
-		Location mainLobby = new Location(Bukkit.getWorld(world),x,y,z,yaw,pitch);
-		jugador.teleport(mainLobby);
-		
-		jugador.getInventory().setContents(inventarioGuardado);
-		jugador.getEquipment().setArmorContents(equipamientoGuardado);
-		jugador.setGameMode(gamemodeGuardado);
-		jugador.setLevel(levelGuardado);
-		jugador.setExp(xpGuardada);
-		jugador.setFoodLevel(hambreGuardada);
-		jugador.setMaxHealth(maxVidaGuardada);
-		jugador.setHealth(vidaGuardada);
-		for(PotionEffect p : jugador.getActivePotionEffects()) {
-			jugador.removePotionEffect(p.getType());
-		}
-		jugador.updateInventory();
 
-		jugador.setAllowFlight(allowFligth);
-		jugador.setFlying(isFlying);
-		
+			FileConfiguration config = plugin.getConfig();
+			double x = Double.parseDouble(config.getString("MainLobby.x", "0.0"));
+			double y = Double.parseDouble(config.getString("MainLobby.y", "64.0"));
+			double z = Double.parseDouble(config.getString("MainLobby.z", "0.0"));
+			String world = config.getString("MainLobby.world", "world");
+			float yaw = Float.parseFloat(config.getString("MainLobby.yaw", "0.0"));
+			float pitch = Float.parseFloat(config.getString("MainLobby.pitch", "0.0"));
+
+			var BukkitWorld = Bukkit.getWorld(world);
+			if (BukkitWorld != null) {
+				Location mainLobby = new Location(BukkitWorld, x, y, z, yaw, pitch);
+				jugador.teleport(mainLobby);
+			}
+
+			jugador.getInventory().setContents(inventarioGuardado);
+            jugador.getEquipment();
+            jugador.getEquipment().setArmorContents(equipamientoGuardado);
+            jugador.setGameMode(gamemodeGuardado != null ? gamemodeGuardado : GameMode.SURVIVAL);
+			jugador.setLevel(levelGuardado);
+			jugador.setExp(xpGuardada);
+			jugador.setFoodLevel(hambreGuardada);
+			jugador.setMaxHealth(maxVidaGuardada);
+			jugador.setHealth(vidaGuardada);
+			for(PotionEffect p : jugador.getActivePotionEffects()) {
+				jugador.removePotionEffect(p.getType());
+			}
+			jugador.updateInventory();
+
+			jugador.setAllowFlight(allowFligth);
+			jugador.setFlying(isFlying);
+		} else {
+			partida.removerJugador(jugador.getName());
+		}
+
 		if(!cerrandoServer) {
-			if(partida.getCantidadActualJugadores() < partida.getCantidadMinimaJugadores() 
-					&& partida.getEstado().equals(EstadoPartida.COMENZANDO)){
+			if(partida.getCantidadActualJugadores() < partida.getCantidadMinimaJugadores()
+					&& EstadoPartida.COMENZANDO.equals(partida.getEstado())){
 				partida.setEstado(EstadoPartida.ESPERANDO);
-			}else if(partida.getCantidadActualJugadores() <= 1 && (partida.getEstado().equals(EstadoPartida.JUGANDO))) {
-				//fase finalizacion
+			} else if(partida.getCantidadActualJugadores() <= 1 && EstadoPartida.JUGANDO.equals(partida.getEstado())) {
 				PartidaManager.iniciarFaseFinalizacion(partida, plugin);
-			}else if((partida.getTeam1().getCantidadJugadores() == 0 || partida.getTeam2().getCantidadJugadores() == 0) && partida.getEstado().equals(EstadoPartida.JUGANDO)) {
-				//fase finalizacion
+			} else if((partida.getTeam1().getCantidadJugadores() == 0 || partida.getTeam2().getCantidadJugadores() == 0) && EstadoPartida.JUGANDO.equals(partida.getEstado())) {
 				PartidaManager.iniciarFaseFinalizacion(partida, plugin);
 			}
 		}
 	}
-	
-	public static void cooldownIniciarPartida(Partida partida,PaintballBattle plugin) {
+
+	public static void cooldownIniciarPartida(Partida partida, PaintballBattle plugin) {
 		partida.setEstado(EstadoPartida.COMENZANDO);
 		FileConfiguration config = plugin.getConfig();
 		FileConfiguration messages = plugin.getMessages();
-		int time = Integer.valueOf(config.getString("arena_starting_cooldown"));
-		
+		int time = Integer.parseInt(config.getString("arena_starting_cooldown", "30"));
+
 		CooldownManager cooldown = new CooldownManager(plugin);
-		cooldown.cooldownComenzarJuego(partida,time);
-		
-		String prefix = ChatColor.translateAlternateColorCodes('&', messages.getString("prefix"))+" ";
-		
-		if(config.getString("broadcast_starting_arena.enabled").equals("true")) {
+		cooldown.cooldownComenzarJuego(partida, time);
+
+		String prefix = ChatColor.translateAlternateColorCodes('&', messages.getString("prefix", "&8[&cPaintball&8]")) + " ";
+
+		if("true".equals(config.getString("broadcast_starting_arena.enabled", "false"))) {
 			List<String> worlds = config.getStringList("broadcast_starting_arena.worlds");
 			for(String world : worlds) {
 				for(Player player : Bukkit.getOnlinePlayers()) {
 					if(player.getWorld().getName().equals(world)) {
-						player.sendMessage(prefix+ChatColor.translateAlternateColorCodes('&', messages.getString("arenaStartingBroadcast")
-								.replace("%arena%", partida.getNombre())));
+						String broadcastMsg = messages.getString("arenaStartingBroadcast", "&aArena %arena% is starting!");
+						player.sendMessage(prefix + ChatColor.translateAlternateColorCodes('&', broadcastMsg.replace("%arena%", partida.getNombre())));
 					}
 				}
 			}
 		}
 	}
-	
-	public static void iniciarPartida(Partida partida,PaintballBattle plugin) {
 
+	public static void iniciarPartida(Partida partida, PaintballBattle plugin) {
 		partida.setEstado(EstadoPartida.JUGANDO);
 
 		FileConfiguration messages = plugin.getMessages();
 		FileConfiguration config = plugin.getConfig();
-		//String prefix = ChatColor.translateAlternateColorCodes('&', messages.getString("prefix"))+" ";
-		// Scoreboards für alle Spieler anzeigen
 
-
-		if(plugin.getConfig().getString("choose_team_system").equals("true")) {
+		if("true".equals(plugin.getConfig().getString("choose_team_system", "false"))) {
 			setTeams(partida);
-		}else {
+		} else {
 			setTeamsAleatorios(partida);
 		}
 
-		darItems(partida,plugin.getConfig(),plugin.getShop(),plugin.getMessages());
+		darItems(partida, plugin.getConfig(), plugin.getShop(), plugin.getMessages());
 		teletransportarJugadores(partida);
-		setVidas(partida,plugin.getShop());
-		
+		setVidas(partida, plugin.getShop());
+
 		ArrayList<JugadorPaintball> jugadores = partida.getJugadores();
-		String[] separados = config.getString("startGameSound").split(";");
+		String soundPath = config.getString("startGameSound");
 		Sound sound = null;
 		float volume = 0;
 		float pitch = 0;
-		try {
-			sound = ValueOfPatch.valueOf(separados[0]);
-			volume = Float.valueOf(separados[1]);
-			pitch = Float.valueOf(separados[2]);
-		}catch(Exception ex) {
-			Bukkit.getConsoleSender().sendMessage(ChatColor.translateAlternateColorCodes('&', PaintballBattle.prefix+"&7Sound Name: &c"+separados[0]+" &7is not valid."));
-			sound = null;
-		}
-		for(int i=0;i<jugadores.size();i++) {
-			String nombreTeam = partida.getEquipoJugador(jugadores.get(i).getJugador().getName()).getTipo();
-			jugadores.get(i).getJugador().sendMessage(ChatColor.translateAlternateColorCodes('&', messages.getString("gameStarted")));
-			jugadores.get(i).getJugador().sendMessage(ChatColor.translateAlternateColorCodes('&', messages.getString("teamInformation").replace("%team%", plugin.getConfig().getString("teams."+nombreTeam+".name"))));
-			jugadores.get(i).getJugador().closeInventory();
-			if(sound != null) {
-				jugadores.get(i).getJugador().playSound(jugadores.get(i).getJugador().getLocation(), sound, volume, pitch);
+
+		if (soundPath != null) {
+			String[] separados = soundPath.split(";");
+			try {
+				sound = ValueOfPatch.valueOf(separados[0]);
+				volume = Float.parseFloat(separados[1]);
+				pitch = Float.parseFloat(separados[2]);
+			} catch(Exception ex) {
+				Bukkit.getConsoleSender().sendMessage(ChatColor.translateAlternateColorCodes('&', PaintballBattle.prefix+"&7Sound Name: &c"+separados[0]+" &7is not valid."));
 			}
 		}
-		
+
+		for (JugadorPaintball jugadore : jugadores) {
+			var equipo = partida.getEquipoJugador(jugadore.getJugador().getName());
+			String nombreTeam = (equipo != null) ? equipo.getTipo() : "";
+
+			jugadore.getJugador().sendMessage(ChatColor.translateAlternateColorCodes('&', messages.getString("gameStarted", "&aGame started!")));
+			String teamInfo = messages.getString("teamInformation", "&7Your Team: %team%");
+			jugadore.getJugador().sendMessage(ChatColor.translateAlternateColorCodes('&', teamInfo.replace("%team%", plugin.getConfig().getString("teams." + nombreTeam + ".name", nombreTeam))));
+			jugadore.getJugador().closeInventory();
+			if (sound != null) {
+				jugadore.getJugador().playSound(jugadore.getJugador().getLocation(), sound, volume, pitch);
+			}
+		}
+
 		CooldownManager cooldown = new CooldownManager(plugin);
 		cooldown.cooldownJuego(partida);
 	}
-	
-	
+
+
 
 	public static void setVidas(Partida partida,FileConfiguration shop) {
 		partida.getTeam1().setVidas(partida.getVidasIniciales());
 		partida.getTeam2().setVidas(partida.getVidasIniciales());
-		
+
 		ArrayList<JugadorPaintball> jugadoresTeam1 = partida.getTeam1().getJugadores();
 		for(JugadorPaintball j : jugadoresTeam1) {
 			//comprobar perk extralives
@@ -255,7 +288,7 @@ public class PartidaManager {
 			if(nivelExtraLives != 0) {
 				String linea = shop.getStringList("perks_upgrades.extra_lives").get(nivelExtraLives-1);
 				String[] sep = linea.split(";");
-				int cantidad = Integer.valueOf(sep[0]);
+				int cantidad = Integer.parseInt(sep[0]);
 				partida.getTeam1().aumentarVidas(cantidad);
 			}
 		}
@@ -266,12 +299,12 @@ public class PartidaManager {
 			if(nivelExtraLives != 0) {
 				String linea = shop.getStringList("perks_upgrades.extra_lives").get(nivelExtraLives-1);
 				String[] sep = linea.split(";");
-				int cantidad = Integer.valueOf(sep[0]);
+				int cantidad = Integer.parseInt(sep[0]);
 				partida.getTeam2().aumentarVidas(cantidad);
 			}
 		}
 	}
-	
+
 	public static void killstreakInstantanea(String key,Player jugador,Partida partida,PaintballBattle plugin) {
 		FileConfiguration config = plugin.getConfig();
 		if(key.equalsIgnoreCase("3_lives")) {
@@ -287,29 +320,29 @@ public class PartidaManager {
 			}
 		}else if(key.equalsIgnoreCase("more_snowballs")) {
 			JugadorPaintball j = partida.getJugador(jugador.getName());
-			int snowballs = Integer.valueOf(config.getString("killstreaks_items."+key+".snowballs"));
-			ItemStack item = null;
+			int snowballs = Integer.parseInt(config.getString("killstreaks_items."+key+".snowballs"));
+			ItemStack item;
 			if(!UtilidadesOtros.isLegacy()) {
 				if(j.getSelectedHat().equals("chicken_hat")) {
 					item = new ItemStack(Material.EGG,1);
 				}else {
 					item = new ItemStack(Material.SNOWBALL,1);
 				}
-				
+
 			}else {
 				if(j.getSelectedHat().equals("chicken_hat")) {
 					item = new ItemStack(Material.EGG,1);
 				}else {
 					item = new ItemStack(Material.valueOf("SNOW_BALL"),1);
 				}
-				
+
 			}
 			for(int i=0;i<snowballs;i++) {
 				jugador.getInventory().addItem(item);
 			}
 		}else if(key.equalsIgnoreCase("lightning")) {
 			JugadorPaintball jugadorAtacante = partida.getJugador(jugador.getName());
-			int radio = Integer.valueOf(config.getString("killstreaks_items."+key+".radius"));
+			int radio = Integer.parseInt(config.getString("killstreaks_items."+key+".radius"));
 			Collection<Entity> entidades = jugador.getWorld().getNearbyEntities(jugador.getLocation(), radio, radio, radio);
 			for(Entity e : entidades) {
 				if(e != null && e.getType().equals(EntityType.PLAYER)) {
@@ -329,7 +362,7 @@ public class PartidaManager {
 			c.cooldownNuke(jugadorAtacante, partida, separados1, separados2);
 		}
 	}
-	
+
 	@SuppressWarnings("unchecked")
 	public static void setTeamsAleatorios(Partida partida) {
 		ArrayList<JugadorPaintball> jugadores = partida.getJugadores();
@@ -341,16 +374,16 @@ public class PartidaManager {
 			int pos = r.nextInt(jugadoresCopia.size());
 			JugadorPaintball jugadorSelect = jugadoresCopia.get(pos);
 			jugadoresCopia.remove(pos);
-			
+
 			partida.repartirJugadorTeam2(jugadorSelect);
 		}
 	}
-	
+
 	private static void setTeams(Partida partida) {
 		//Falta comprobar lo siguiente:
 		//Si 2 usuarios seleccionan team y uno se va, los 2 usuarios estaran en el mismo team al
 		//iniciar la partida y seran solo ellos 2.
-		
+
 		ArrayList<JugadorPaintball> jugadores = partida.getJugadores();
 		for(JugadorPaintball j : jugadores) {
 			partida.getEquipoJugador(j.getJugador().getName()).removerJugador(j.getJugador().getName());
@@ -369,7 +402,7 @@ public class PartidaManager {
 				partida.getTeam1().agregarJugador(j);
 			}
 		}
-		
+
 		//Balanceo final
 		Equipo equipo1 = partida.getTeam1();
 		Equipo equipo2 = partida.getTeam2();
@@ -390,16 +423,16 @@ public class PartidaManager {
 			}
 		}
 	}
-	
+
 	public static void darItems(Partida partida,FileConfiguration config,FileConfiguration shop,FileConfiguration messages) {
 		ArrayList<JugadorPaintball> jugadores = partida.getJugadores();
 		for(JugadorPaintball j : jugadores) {
 			Player p = j.getJugador();
 			p.getInventory().setItem(8, null);
-			
+
 			Equipo equipo = partida.getEquipoJugador(p.getName());
 			if(config.contains("teams."+equipo.getTipo())) {
-				darEquipamientoJugador(p,Integer.valueOf(config.getString("teams."+equipo.getTipo()+".color")));
+				darEquipamientoJugador(p,Integer.parseInt(config.getString("teams."+equipo.getTipo()+".color")));
 			}else {
 				darEquipamientoJugador(p,0);
 			}
@@ -408,7 +441,7 @@ public class PartidaManager {
 			if(nivelInitialKillcoins != 0) {
 				String linea = shop.getStringList("perks_upgrades.initial_killcoins").get(nivelInitialKillcoins-1);
 				String[] sep = linea.split(";");
-				int cantidad = Integer.valueOf(sep[0]);
+				int cantidad = Integer.parseInt(sep[0]);
 				j.agregarCoins(cantidad);
 			}
 			UtilidadesItems.crearItemKillstreaks(j,config);
@@ -416,7 +449,7 @@ public class PartidaManager {
 			setBolasDeNieve(j,config);
 		}
 	}
-	
+
 	@SuppressWarnings("unchecked")
 	public static void ponerHat(Partida partida,JugadorPaintball jugador,FileConfiguration config,FileConfiguration messages) {
 		ArrayList<Hat> hats = PaintballAPI.getHats(jugador.getJugador());
@@ -433,7 +466,7 @@ public class PartidaManager {
 					item = UtilidadesItems.getCabeza(item, id, textura);
 				}
 				jugador.getJugador().getEquipment().setHelmet(item);
-				
+
 				if(h.getName().equals("speed_hat")) {
 					jugador.getJugador().addPotionEffect(new PotionEffect(PotionEffectType.SPEED,9999999,0,false,false));
 				}else if(h.getName().equals("present_hat")) {
@@ -448,39 +481,39 @@ public class PartidaManager {
 						j.agregarCoins(3);
 						jugador.getJugador().sendMessage(ChatColor.translateAlternateColorCodes('&', messages.getString("presentHatGive").replace("%player%", j.getJugador().getName())));
 						j.getJugador().sendMessage(ChatColor.translateAlternateColorCodes('&', messages.getString("presentHatReceive").replace("%player%", jugador.getJugador().getName())));
-					}	
+					}
 				}
 				return;
 			}
 		}
 	}
-	
+
 	public static void darEquipamientoJugador(Player jugador,int color) {
 		ItemStack item = new ItemStack(Material.LEATHER_HELMET,1);
 		LeatherArmorMeta meta = (LeatherArmorMeta) item.getItemMeta();
 		meta.setColor(Color.fromRGB(color));
 		item.setItemMeta(meta);
 		jugador.getInventory().setHelmet(item);
-		
+
 		item = new ItemStack(Material.LEATHER_CHESTPLATE,1);
 		meta = (LeatherArmorMeta) item.getItemMeta();
 		meta.setColor(Color.fromRGB(color));
 		item.setItemMeta(meta);
 		jugador.getInventory().setChestplate(item);
-		
+
 		item = new ItemStack(Material.LEATHER_LEGGINGS,1);
 		meta = (LeatherArmorMeta) item.getItemMeta();
 		meta.setColor(Color.fromRGB(color));
 		item.setItemMeta(meta);
 		jugador.getInventory().setLeggings(item);
-		
+
 		item = new ItemStack(Material.LEATHER_BOOTS,1);
 		meta = (LeatherArmorMeta) item.getItemMeta();
 		meta.setColor(Color.fromRGB(color));
 		item.setItemMeta(meta);
 		jugador.getInventory().setBoots(item);
 	}
-	
+
 	public static void setBolasDeNieve(JugadorPaintball j,FileConfiguration config) {
 		for(int i=0;i<=7;i++) {
 			j.getJugador().getInventory().setItem(i, null);
@@ -488,8 +521,8 @@ public class PartidaManager {
 		for(int i=9;i<=35;i++) {
 			j.getJugador().getInventory().setItem(i, null);
 		}
-		int amount = Integer.valueOf(config.getString("initial_snowballs"));
-		ItemStack item = null;
+		int amount = Integer.parseInt(config.getString("initial_snowballs"));
+		ItemStack item;
 		if(!UtilidadesOtros.isLegacy()) {
 			if(j.getSelectedHat().equals("chicken_hat")) {
 				item = new ItemStack(Material.EGG,1);
@@ -508,7 +541,7 @@ public class PartidaManager {
 			j.getJugador().getInventory().addItem(item);
 		}
 	}
-	
+
 	public static void lanzarFuegos(ArrayList<JugadorPaintball> jugadores) {
 		for(JugadorPaintball j : jugadores) {
 			Firework fw = (Firework) j.getJugador().getWorld().spawnEntity(j.getJugador().getLocation(), EntityType.FIREWORK_ROCKET);
@@ -541,7 +574,7 @@ public class PartidaManager {
 		String nameTeam1 = config.getString("teams."+partida.getTeam1().getTipo()+".name");
 		String nameTeam2 = config.getString("teams."+partida.getTeam2().getTipo()+".name");
 		
-		String status = "";
+		String status;
 		if(ganador == null) {
 			//empate
 			status = messages.getString("gameFinishedTieStatus");
@@ -551,10 +584,10 @@ public class PartidaManager {
 		}	
 				
 		ArrayList<JugadorPaintball> jugadoresKillsOrd = partida.getJugadoresKills();
-		String top1 = "";
-		String top2 = "";
-		String top3 = "";
-		int top1Kills = 0;
+		String top1;
+		String top2;
+		String top3;
+		int top1Kills;
 		int top2Kills = 0;
 		int top3Kills = 0;
 		
@@ -565,8 +598,8 @@ public class PartidaManager {
 			top2Kills = jugadoresKillsOrd.get(1).getAsesinatos();
 			top3 = messages.getString("topKillsNone");
 		}else if(jugadoresKillsOrd.size() == 1) {
-			top1 = jugadoresKillsOrd.get(0).getJugador().getName();
-			top1Kills = jugadoresKillsOrd.get(0).getAsesinatos();
+			top1 = jugadoresKillsOrd.getFirst().getJugador().getName();
+			top1Kills = jugadoresKillsOrd.getFirst().getAsesinatos();
 			top3 = messages.getString("topKillsNone");
 			top2 = messages.getString("topKillsNone");
 		}else {
@@ -580,13 +613,13 @@ public class PartidaManager {
 		ArrayList<JugadorPaintball> jugadores = partida.getJugadores();
 		List<String> msg = messages.getStringList("gameFinished");
 		for(JugadorPaintball j : jugadores) {
-			for(int i=0;i<msg.size();i++) {
-				j.getJugador().sendMessage(ChatColor.translateAlternateColorCodes('&', msg.get(i).replace("%status_message%", status).replace("%team1%", nameTeam1)
-						.replace("%team2%", nameTeam2).replace("%kills_team1%", partida.getTeam1().getAsesinatosTotales()+"")
-						.replace("%kills_team2%", partida.getTeam2().getAsesinatosTotales()+"").replace("%player1%", top1).replace("%player2%", top2)
-						.replace("%player3%", top3).replace("%kills_player1%", top1Kills+"").replace("%kills_player2%", top2Kills+"")
-						.replace("%kills_player3%", top3Kills+"").replace("%kills_player%", j.getAsesinatos()+"")));
-			}
+            for (String s : msg) {
+                j.getJugador().sendMessage(ChatColor.translateAlternateColorCodes('&', s.replace("%status_message%", status).replace("%team1%", nameTeam1)
+                        .replace("%team2%", nameTeam2).replace("%kills_team1%", partida.getTeam1().getAsesinatosTotales() + "")
+                        .replace("%kills_team2%", partida.getTeam2().getAsesinatosTotales() + "").replace("%player1%", top1).replace("%player2%", top2)
+                        .replace("%player3%", top3).replace("%kills_player1%", top1Kills + "").replace("%kills_player2%", top2Kills + "")
+                        .replace("%kills_player3%", top3Kills + "").replace("%kills_player%", j.getAsesinatos() + "")));
+            }
 			Equipo equipoJugador = partida.getEquipoJugador(j.getJugador().getName());
 			if(MySQL.isEnabled(plugin.getConfig())) {
 				int win = 0;
@@ -616,9 +649,9 @@ public class PartidaManager {
 				//Este registro es el que se crea para datos mensuales y semanales
 				MySQL.crearJugadorPartidaAsync(plugin, j.getJugador().getUniqueId().toString(), j.getJugador().getName(), partida.getNombre(), win, tie, lose, j.getAsesinatos(),0,0);	
 			}else {
-				plugin.registerPlayer(j.getJugador().getUniqueId().toString()+".yml");
+				plugin.registerPlayer(j.getJugador().getUniqueId() +".yml");
 				if(plugin.getJugador(j.getJugador().getName()) == null) {
-					plugin.agregarJugadorDatos(new JugadorDatos(j.getJugador().getName(),j.getJugador().getUniqueId().toString(),0,0,0,0,0,new ArrayList<Perk>(),new ArrayList<Hat>()));
+					plugin.agregarJugadorDatos(new JugadorDatos(j.getJugador().getName(),j.getJugador().getUniqueId().toString(),0,0,0,0,0, new ArrayList<>(), new ArrayList<>()));
 				}
 				JugadorDatos jugador = plugin.getJugador(j.getJugador().getName());
 				if(partida.getEquipoJugador(j.getJugador().getName()).equals(ganador)) {
@@ -663,40 +696,40 @@ public class PartidaManager {
 			}
 		}
 		
-		int time = Integer.valueOf(config.getString("arena_ending_phase_cooldown"));
+		int time = Integer.parseInt(config.getString("arena_ending_phase_cooldown"));
 		CooldownManager c = new CooldownManager(plugin);
 		c.cooldownFaseFinalizacion(partida,time,ganador);
 	}
 	
 	public static void ejecutarComandosRewards(List<String> commands,JugadorPaintball j) {
 		CommandSender console = Bukkit.getServer().getConsoleSender();
-		for(int i=0;i<commands.size();i++){	
-			if(commands.get(i).startsWith("msg %player%")) {
-				String mensaje = commands.get(i).replace("msg %player% ", "");
-				j.getJugador().sendMessage(ChatColor.translateAlternateColorCodes('&', mensaje));
-			}else {
-				String comandoAEnviar = commands.get(i).replaceAll("%player%", j.getJugador().getName()); 
-				if(comandoAEnviar.contains("%random")) {
-					int pos = comandoAEnviar.indexOf("%random");
-					int nextPos = comandoAEnviar.indexOf("%", pos+1);
-					String variableCompleta = comandoAEnviar.substring(pos,nextPos+1);
-					String variable = variableCompleta.replace("%random_", "").replace("%", "");
-					String[] sep = variable.split("-");
-					int cantidadMinima = 0;
-					int cantidadMaxima = 0;
-					
-				    try {
-				    	cantidadMinima = (int) UtilidadesOtros.eval(sep[0].replace("kills", j.getAsesinatos()+""));
-				    	cantidadMaxima = (int) UtilidadesOtros.eval(sep[1].replace("kills", j.getAsesinatos()+""));
-					} catch (Exception e) {
-						
-					}
-				    int num = UtilidadesOtros.getNumeroAleatorio(cantidadMinima, cantidadMaxima);
-				    comandoAEnviar = comandoAEnviar.replace(variableCompleta, num+"");
-				}
-				Bukkit.dispatchCommand(console, comandoAEnviar);	
-			}
-		}
+        for (String command : commands) {
+            if (command.startsWith("msg %player%")) {
+                String mensaje = command.replace("msg %player% ", "");
+                j.getJugador().sendMessage(ChatColor.translateAlternateColorCodes('&', mensaje));
+            } else {
+                String comandoAEnviar = command.replaceAll("%player%", j.getJugador().getName());
+                if (comandoAEnviar.contains("%random")) {
+                    int pos = comandoAEnviar.indexOf("%random");
+                    int nextPos = comandoAEnviar.indexOf("%", pos + 1);
+                    String variableCompleta = comandoAEnviar.substring(pos, nextPos + 1);
+                    String variable = variableCompleta.replace("%random_", "").replace("%", "");
+                    String[] sep = variable.split("-");
+                    int cantidadMinima = 0;
+                    int cantidadMaxima = 0;
+
+                    try {
+                        cantidadMinima = (int) UtilidadesOtros.eval(sep[0].replace("kills", j.getAsesinatos() + ""));
+                        cantidadMaxima = (int) UtilidadesOtros.eval(sep[1].replace("kills", j.getAsesinatos() + ""));
+                    } catch (Exception _) {
+
+                    }
+                    int num = UtilidadesOtros.getNumeroAleatorio(cantidadMinima, cantidadMaxima);
+                    comandoAEnviar = comandoAEnviar.replace(variableCompleta, num + "");
+                }
+                Bukkit.dispatchCommand(console, comandoAEnviar);
+            }
+        }
 	}
 	
 	public static void finalizarPartida(Partida partida,PaintballBattle plugin,boolean cerrandoServer,Equipo ganadorEquipo) {
@@ -704,7 +737,7 @@ public class PartidaManager {
 		ArrayList<JugadorPaintball> jugadores = partida.getJugadores();
 		// Scoreboards für alle Spieler entfernen
 	for(JugadorPaintball j : jugadores) {
-			String tipoFin = "";
+			String tipoFin;
 			if(ganadorEquipo != null) {
 				Equipo equipoJugador = partida.getEquipoJugador(j.getJugador().getName());
 				if(ganadorEquipo.getTipo().equals(equipoJugador.getTipo())) {
@@ -769,7 +802,7 @@ public class PartidaManager {
 		String[] separados = config.getString("killedBySound").split(";");
 		try {
 			Sound sound = ValueOfPatch.valueOf(separados[0]);
-			jugadorDañado.getJugador().playSound(jugadorDañado.getJugador().getLocation(), sound, Float.valueOf(separados[1]), Float.valueOf(separados[2]));
+			jugadorDañado.getJugador().playSound(jugadorDañado.getJugador().getLocation(), sound, Float.parseFloat(separados[1]), Float.parseFloat(separados[2]));
 		}catch(Exception ex) {
 			Bukkit.getConsoleSender().sendMessage(ChatColor.translateAlternateColorCodes('&', PaintballBattle.prefix+"&7Sound Name: &c"+separados[0]+" &7is not valid."));
 		}
@@ -790,7 +823,7 @@ public class PartidaManager {
 				separados = config.getString("explosiveHatSound").split(";");
 				try {
 					Sound sound = ValueOfPatch.valueOf(separados[0]);
-					jugadorDañado.getJugador().getWorld().playSound(jugadorDañado.getJugador().getLocation(), sound, Float.valueOf(separados[1]), Float.valueOf(separados[2]));
+					jugadorDañado.getJugador().getWorld().playSound(jugadorDañado.getJugador().getLocation(), sound, Float.parseFloat(separados[1]), Float.parseFloat(separados[2]));
 				}catch(Exception ex) {
 					Bukkit.getConsoleSender().sendMessage(ChatColor.translateAlternateColorCodes('&', PaintballBattle.prefix+"&7Sound Name: &c"+separados[0]+" &7is not valid."));
 				}
@@ -828,7 +861,7 @@ public class PartidaManager {
 		if(nivelExtraKillCoins != 0) {
 			String linea = plugin.getShop().getStringList("perks_upgrades.extra_killcoins").get(nivelExtraKillCoins-1);
 			String[] sep = linea.split(";");
-			int cantidad = Integer.valueOf(sep[0]);
+			int cantidad = Integer.parseInt(sep[0]);
 			cantidadCoinsGanados = cantidadCoinsGanados+cantidad;
 		}
 		String lastKilledBy = jugadorAtacante.getLastKilledBy();
@@ -854,14 +887,14 @@ public class PartidaManager {
 			separados = config.getString("killSound").split(";");
 			try {
 				Sound sound = ValueOfPatch.valueOf(separados[0]);
-				jugadorAtacante.getJugador().playSound(jugadorAtacante.getJugador().getLocation(), sound, Float.valueOf(separados[1]), Float.valueOf(separados[2]));
+				jugadorAtacante.getJugador().playSound(jugadorAtacante.getJugador().getLocation(), sound, Float.parseFloat(separados[1]), Float.parseFloat(separados[2]));
 			}catch(Exception ex) {
 				Bukkit.getConsoleSender().sendMessage(ChatColor.translateAlternateColorCodes('&', PaintballBattle.prefix+"&7Sound Name: &c"+separados[0]+" &7is not valid."));
 			}
 		}
 		
 		
-		int snowballs = Integer.valueOf(config.getString("snowballs_per_kill"));
+		int snowballs = Integer.parseInt(config.getString("snowballs_per_kill"));
 		if(!UtilidadesOtros.isLegacy()) {
 			if(jugadorAtacante.getSelectedHat().equals("chicken_hat")) {
 				jugadorAtacante.getJugador().getInventory().addItem(new ItemStack(Material.EGG,snowballs));
@@ -894,15 +927,15 @@ public class PartidaManager {
 	
 	public static Partida getPartidaDisponible(PaintballBattle plugin) {
 		ArrayList<Partida> partidas = plugin.getPartidas();
-		ArrayList<Partida> disponibles = new ArrayList<Partida>();
-		for(int i=0;i<partidas.size();i++) {
-			if(partidas.get(i).getEstado().equals(EstadoPartida.ESPERANDO) || 
-					partidas.get(i).getEstado().equals(EstadoPartida.COMENZANDO)) {
-				if(!partidas.get(i).estaLlena()) {
-					disponibles.add(partidas.get(i));
-				}
-			}
-		}
+		ArrayList<Partida> disponibles = new ArrayList<>();
+        for (Partida partida : partidas) {
+            if (partida.getEstado().equals(EstadoPartida.ESPERANDO) ||
+                    partida.getEstado().equals(EstadoPartida.COMENZANDO)) {
+                if (!partida.estaLlena()) {
+                    disponibles.add(partida);
+                }
+            }
+        }
 		
 		if(disponibles.isEmpty()) {
 			return null;
@@ -918,6 +951,6 @@ public class PartidaManager {
 				}
 			}
 		}
-		return disponibles.get(0);
+		return disponibles.getFirst();
 	}
 }
